finish nav styling

--- a/index.html
+++ b/index.html
@@ -9,22 +9,16 @@
   <body>
 
     <!-- Header Area -->
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <img src="./resources/images/ic-logo.svg" alt="colmar academy logo">
-          <span class="dark-gray">Colmar</span><span class="light-gray">Academy</span>
-        </div>
-        <div class="nav">
-          <ul>
-            <li>On Campus</li>
-            <li>Online</li>
-            <li>or companies</li>
-            <li>Sign in</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <header class="flex-container">
+        <img src="./resources/images/ic-logo.svg" alt="colmar academy logo">
+        <span class="logo dark-gray">Colmar</span><span class="logo light-gray">Academy</span>
+        <nav>
+          <span><a href="#">On Campus</a></span>
+          <span><a href="#">Online</a></span>
+          <span><a href="#">or companies</a></span>
+          <span><a href="#">Sign in</a></span>
+        </nav>
+    </header>
 
     <!-- Banner Area -->
     <div class="banner-area">
