--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     </header>
 
     <!-- Banner Area -->
-    <div class="banner-area">
+    <div class="main">
       <img src="./resources/images/banner.jpg" alt="students reading books">
-      <h1>Learn something new everyday</h1>
-      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-      <span class="start-here-button">Start here</span>
+      <div class="banner-text">
+        <h1>Learn something new everyday</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <span class="start-here-button">Start here</span>
+      </div>
     </div>
 
     <!-- Main Body Content -->
