--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
     <!-- Banner Area -->
     <div class="main">
-      <img src="./resources/images/banner.jpg" alt="students reading books">
-      <div class="banner-text">
+      <div class="column-large">
+        <img src="./resources/images/banner.jpg" alt="students reading books">
+      </div>
+      <div class="column-small">
         <h1>Learn something new everyday</h1>
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-        <span class="start-here-button">Start here</span>
+        <button class="start-here">Start here</span>
       </div>
     </div>
 
